Replace browser defined font family of `button` elements

--- a/packages/ui/src/components/Forms/Button/Button.sass
+++ b/packages/ui/src/components/Forms/Button/Button.sass
@@ -44,6 +44,7 @@
 	box-shadow: var(--cui-button-box-shadow)
 	color: var(--cui-button-color)
 	display: inline-flex
+	font-family: inherit
 	font-size: unset
 	font-weight: 600
 	height: var(--cui-button-height)
