--- a/packages/ui/src/components/ActionableBox/ActionableBox.sass
+++ b/packages/ui/src/components/ActionableBox/ActionableBox.sass
@@ -31,4 +31,7 @@
 	&:focus-within > * > &-actions
 		opacity: 1
 		pointer-events: all
+
+	&:hover > * > &-actions,
+	&:focus-within > * > &-actions
 		transform: translateY(0)
