Wrapped elements in `FieldContainer` & `FieldSet`
- `contenteditable="false"` element wrapeprs should not create extra layout

--- a/packages/ui/src/components/Forms/FieldContainer/FieldContainer.sass
+++ b/packages/ui/src/components/Forms/FieldContainer/FieldContainer.sass
@@ -45,7 +45,8 @@
 		flex: 1 1 calc(100% / 7 * 5)
 
 	&-body-content
-		//
+		> [contenteditable="false"]
+			display: contents
 	&-body-content-description
 		font-weight: 500
 		color: var(--cui-color--medium)
