Disable navigation when `AnchorButton` is disabled

--- a/packages/ui/src/components/Forms/Button/Button.sass
+++ b/packages/ui/src/components/Forms/Button/Button.sass
@@ -164,6 +164,7 @@
 		--cui-button-color--highlighted: var(--cui-button-color--disabled)
 		--cui-button-color--pressed: var(--cui-button-color--disabled)
 		--cui-button-color: var(--cui-button-color--disabled)
+		cursor: not-allowed
 		&.view-seamless
 			--cui-button-background-color: transparent
 
