--- a/packages/ui/src/styles/abstract/controlVariants.sass
+++ b/packages/ui/src/styles/abstract/controlVariants.sass
@@ -41,14 +41,14 @@
 
 	&.view-seamless,
 	&.view-seamless-with-padding
-		background: transparent
-		border-color: transparent
+		--input-control-background: transparent
+		--input-control-border-color: transparent
 
 		&:focus
-			--input-control--background: var(--cui-background-color--above)
+			--input-control-background: var(--cui-background-color--above)
 			box-shadow: none
 		&:focus-within
-			--input-control--background: var(--cui-background-color--above)
+			--input-control-background: var(--cui-background-color--above)
 			box-shadow: none
 		&:hover
 			--input-control-background: var(--cui-background-color--above)
