--- a/packages/ui/src/components/index.sass
+++ b/packages/ui/src/components/index.sass
@@ -2,6 +2,7 @@
 @import 'Aether/index'
 @import 'Box/index'
 @import 'Breadcrumbs/index'
+@import 'Collapsible/index'
 @import 'Divider/index'
 @import 'Forms/index'
 @import 'Layout/index'
