Layout Page Aside: Fix CSS property
- Fixes `calc()` function caused by missing CSS unit
- Grows page aside content to it's parent height

--- a/packages/ui/src/components/Layout/LayoutPageAside.sass
+++ b/packages/ui/src/components/Layout/LayoutPageAside.sass
@@ -10,6 +10,7 @@
     margin: 0
 
   &-content
+    flex-grow: 1
     padding-bottom: var(--cui-layout-section-padding-bottom)
     padding-left: var(--cui-layout-page-padding-left)
     padding-right: var(--cui-layout-page-padding-right)
@@ -20,7 +21,7 @@
     border-left: 1px solid transparent
     border-top: unset
     bottom: 0
-    height: calc(100vh - var(--cui-content-offset-top, 0))
+    height: calc(100vh - var(--cui-content-offset-top, 0px))
     margin-top: unset
     max-width: 50%
     overflow-y: auto
