--- a/packages/ui/src/components/index.sass
+++ b/packages/ui/src/components/index.sass
@@ -18,6 +18,7 @@
 @import 'SectionTabs/index'
 @import 'Spacer/index'
 @import 'Stack/index'
+@import 'Table/index'
 @import 'Tabs/index'
 @import 'TitleBar/index'
 @import 'Typography/index'
