Card: Add style for active (selected) state
- Add mouse feature classes to non-linkable Card
- Hide wrapper div when no children (title) is present

--- a/packages/ui/src/components/Card/Card.sass
+++ b/packages/ui/src/components/Card/Card.sass
@@ -67,6 +67,11 @@
   &-thumbnail
     border-radius: var(--card-thumbnail-border-radius)
 
+  &.is-active &-inner
+    border: var(--card-thumbnail-border-radius) solid var(--cui-control-color)
+  &.is-active &-thumbnail
+    border-radius: 0
+
   &-thumbnail
     background-position: center center
     background-repeat: no-repeat
