Add Dialog Modal UI
- Serves more complex windows with header, footer, body and close button
  with `Stack` components underneath for extra control of the parts
- 3 layout modes: `fit-content` that shrinks to its content, `wide` with larger
  max midth and `expanded` for immerse experience

--- a/packages/ui/src/components/index.sass
+++ b/packages/ui/src/components/index.sass
@@ -5,6 +5,7 @@
 @import 'Card/index'
 @import 'Collapsible/index'
 @import 'Divider/index'
+@import 'Dialog/index'
 @import 'Forms/index'
 @import 'Grid/index'
 @import 'Layout/index'
