add support for soratable connecting entitites in dynamic multi choice field

--- a/packages/admin/src/styles/index.sass
+++ b/packages/admin/src/styles/index.sass
@@ -26,6 +26,7 @@
 @import 'parts/selectField'
 @import 'parts/shape'
 @import 'parts/sideDimensions'
+@import 'parts/sortable'
 @import 'parts/tile'
 @import 'parts/tileList'
 @import 'parts/toaster'
