Update Layout: Add props to align content & fit content
- Add page & page content width & height CSS property
- Deprecate `layout` prop, replace with `pageContentLayout`
- Update `MutableEntityListPageRenderer` due layout props change

--- a/packages/ui/src/components/Layout/LayoutPageContent.sass
+++ b/packages/ui/src/components/Layout/LayoutPageContent.sass
@@ -1,4 +1,6 @@
 .#{$cui-conf-globalPrefix}layout-page-content
+	--cui-page-content-width: calc(var(--cui-page-width, 100vw) - var(--cui-layout-page-padding-left, 0px) - var(--cui-layout-page-padding-right, 0px))
+	--cui-page-content-height: calc(var(--cui-page-height, 100vh) - var(--cui-layout-page-padding-bottom, 0px) - var(--cui-layout-page-padding-top, 0px))
 	display: flex
 	flex-direction: row
 	flex: 1
@@ -7,20 +9,27 @@
 	padding-right: var(--cui-layout-page-padding-right)
 	padding-bottom: var(--cui-layout-page-padding-bottom)
 	transition: border-color var(--cui-transition-duration)
+	max-width: 100%
 
 	&-container
 		display: flex
 		flex-direction: column
 		flex-grow: 1
 		gap: var(--cui-layout-section-gap)
+		max-width: 100%
 
 	@media (min-width: $breakpoint-min-large)
 		&-container
-			flex-grow: unset
-			margin-left: auto
-			margin-right: auto
 			flex-basis: $breakpoint-min-medium
-			&.view-full-width
+			flex-grow: unset
+			&.layout-start
+				margin-right: auto
+			&.layout-end
+				margin-left: auto
+			&.layout-center
+				margin-left: auto
+				margin-right: auto
+			&.layout-stretch
 				flex-basis: 100%
 	@media (min-width: $breakpoint-min-xlarge)
 		&:not(:last-child)
