--- a/packages/ui/src/components/Layout/LayoutPage.sass
+++ b/packages/ui/src/components/Layout/LayoutPage.sass
@@ -9,10 +9,17 @@
 	justify-content: flex-start
 
 	&-content-wrap
+		--cui-page-width: calc(100vw - var(--layout-chrome-bar-width, 0px))
+		--cui-page-height: calc(100vh - var(--cui-content-offset-top, 0px))
 		background-color: var(--cui-background-color)
 		display: flex
+		flex: 1 1 100%
 		flex-direction: column
 		position: relative
+		&.fit-none
+			max-width: var(--cui-page-width, 100vw)
+		&.fit-content
+			max-width: initial
 
 	@media (min-width: $breakpoint-min-xlarge)
 		&-content-wrap
