Update RepeaterItemContainer: Use new Box
- Disable user select on labels & handle
- Support horizontal layout

--- a/packages/ui/src/components/RepeaterItemContainer/RepeaterItemContainer.sass
+++ b/packages/ui/src/components/RepeaterItemContainer/RepeaterItemContainer.sass
@@ -8,6 +8,19 @@
 	&.view-sortable
 		--cui-box-content-padding-left: calc(2 * var(--cui-box-content-padding))
 
+	&-content.view-horizontal
+		min-width: min-content
+		@media (min-width: $breakpoint-min-small)
+			flex-direction: row
+			flex-wrap: nowrap
+			min-width: max-content
+		& > *
+			flex-grow: 1
+			flex-basis: auto
+			max-width: 100%
+			@media (min-width: $breakpoint-min-small)
+				flex-basis: 0%
+
 	&-header
 		display: flex
 		justify-content: space-between
@@ -25,10 +38,15 @@
 		bottom: 0
 		padding: var(--cui-box-content-padding) 0
 		width: calc(2 * var(--cui-box-content-padding))
+		user-select: none
 
 	&-label
 		font-weight: 800
+		user-select: none
 	&-actions
+		display: flex
+		column-gap: var(--cui-gap-horizontal)
+		row-gap: var(--cui-gap-vertical)
 		margin-left: .5em
 		margin-right: -.5em
 		margin-top: -.5em
