--- a/packages/ui/src/components/Forms/FieldContainer/FieldContainer.sass
+++ b/packages/ui/src/components/Forms/FieldContainer/FieldContainer.sass
@@ -1,11 +1,21 @@
 @use 'sass:math'
 
 .#{$cui-conf-globalPrefix}field-container
-	align-self: stretch
-	column-gap: calc(2 * var(--cui-gap-horizontal))
-	display: flex
-	flex-direction: column
-	row-gap: calc(2 * var(--cui-gap-vertical))
+	$field-container: &
+	--field-container-column-gap: calc(2 * var(--cui-gap-horizontal))
+	--field-container-row-gap: calc(2 * var(--cui-gap-vertical))
+
+	&.with-focus > &-inner > &-body > &-body-contents:focus-within
+		box-shadow: var(--cui-control-focus-ring-box-shadow)
+		outline: none
+	&.with-hover > &-inner > &-body > &-body-contents:hover
+		border-color: var(--cui-color--low)
+
+	&-header
+		font-weight: 700
+		user-select: none
+	&-required-asterix
+		color: var(--cui-control-color)
 
 	&.width-fluid
 		max-width: 100%
@@ -15,64 +25,169 @@
 	.#{$cui-conf-globalPrefix}layout-page-content-wrap & &
 		min-width: unset
 
-	&.view-small
-		font-size: var(--cui-control-font-size--small)
-	&.view-large
-		font-size: var(--cui-control-font-size--large)
-
 	&:focus-within
 		color: var(--cui-control-color)
-
-	&-label
-		display: flex
-		flex-direction: column
-		column-gap: calc(2 * var(--cui-gap-horizontal))
-		row-gap: calc(2 * var(--cui-gap-vertical))
 	&:not(.is-active):not(:focus-within) > &-label
 		color: var(--cui-color--high)
 
-	&-required-asterix
-		color: var(--cui-control-color)
-
-	&-header,
-	&-body
-		display: flex
-		flex-direction: column
-		gap: var(--cui-gap-vertical)
-
-	&-header
-		font-weight: 700
-		flex: 1 1 calc(100% / 7 * 2)
-		user-select: none
-	&-body
-		flex: 1 1 calc(100% / 7 * 5)
-
-	&-body-content
+	&-body-contents
+		&.is-scrollable
+			overflow: auto
 		> [contenteditable="false"]
 			display: contents
-	&-body-content-description
+	&-description
 		font-weight: 500
 		color: var(--cui-color--medium)
 		display: block
 		font-size: 0.9em
 		line-height: $cui-base-lineHeight
 
-	&.view-labelLeft &-label,
-	&.view-labelInlineLeft &-label
-		flex-direction: row
+	&-inner
+		column-gap: var(--field-container-column-gap)
+		height: inherit
+		max-height: inherit
+		max-width: inherit
+		row-gap: var(--field-container-row-gap)
+		width: inherit
 
-	&.view-labelRight &-label,
-	&.view-labelInlineRight &-label
-		flex-direction: row-reverse
+	&-inner,
+	&-body,
+	&-body-contents
+		min-height: 0px
+		min-width: 0px
 
-	&.view-labelLeft &-header,
-	&.view-labelInlineLeft &-header,
-	&.view-labelRight &-header,
-	&.view-labelInlineRight &-header
-		justify-content: center
-		align-self: stretch
+	&-inner.layout-vertical,
+	&-inner.layout-vertical > &-header,
+	&-inner.layout-vertical > &-body,
+	&-inner.layout-vertical > &-footer,
+	&-inner.layout-vertical > &-errors
+		display: flex
+		flex-direction: column
 
-	&.view-labelInlineLeft &-header
-		flex: unset
-	&.view-labelInlineRight &-body
-		flex: unset
+	&-inner.layout-horizontal
+		display: grid
+		grid-auto-columns: 2fr 3fr 2fr
+
+	&-inner.layout-horizontal > &-header,
+	&-inner.layout-horizontal > &-body,
+	&-inner.layout-horizontal > &-footer,
+	&-inner.layout-horizontal > &-errors
+		grid-column: span 3
+
+	&-inner.layout-horizontal > &-header,
+	&-inner.layout-horizontal > &-body,
+	&-inner.layout-horizontal > &-footer,
+	&-inner.layout-horizontal > &-errors
+		display: flex
+		flex-direction: column
+
+	&-inner.layout-horizontal.view-labelLeft > &-header
+		grid-column: 1
+		grid-row: 1
+	&-inner.layout-horizontal.view-labelLeft > &-body
+		grid-column: 2/4
+		grid-row: 1
+	&-inner.layout-horizontal.view-labelLeft > &-footer
+		grid-column: 2/4
+
+	&-inner.layout-horizontal.view-labelRight > &-header
+		grid-column: 3
+		grid-row: 1
+	&-inner.layout-horizontal.view-labelRight > &-body
+		align-self: flex-start
+		grid-column: 1/3
+		grid-row: 1
+	&-inner.layout-horizontal.view-labelRight > &-footer
+		grid-column: 1/3
+
+	//////
+
+	&-inner.layout-horizontal-middle
+		display: grid
+		grid-auto-columns: 2fr 3fr 2fr
+
+	&-inner.layout-horizontal-middle > &-body
+		display: contents
+
+	&-inner.layout-horizontal-middle > &-header,
+	&-inner.layout-horizontal-middle > &-body > &-body-contents,
+	&-inner.layout-horizontal-middle > &-body > &-errors,
+	&-inner.layout-horizontal-middle > &-body > &-description,
+	&-inner.layout-horizontal-middle > &-footer,
+	&-inner.layout-horizontal-middle > &-errors
+		display: flex
+		flex-direction: column
+
+	&-inner.layout-horizontal-middle.view-labelLeft > &-header
+		grid-row: 1
+	&-inner.layout-horizontal-middle.view-labelLeft > &-body > &-body-contents,
+	&-inner.layout-horizontal-middle.view-labelLeft > &-body > &-description,
+	&-inner.layout-horizontal-middle.view-labelLeft > &-body > &-errors,
+	&-inner.layout-horizontal-middle.view-labelLeft > &-footer
+		grid-column: 2/4
+
+	&-inner.layout-horizontal-middle.view-labelRight > &-header
+		grid-row: 1
+		grid-column: 3
+	&-inner.layout-horizontal-middle.view-labelRight > &-body > &-body-contents,
+	&-inner.layout-horizontal-middle.view-labelRight > &-body > &-description,
+	&-inner.layout-horizontal-middle.view-labelRight > &-body > &-errors,
+	&-inner.layout-horizontal-middle.view-labelRight > &-footer
+		grid-column: 1/3
+
+	//////
+
+	&-inner.layout-horizontal-inline
+		align-self: flex-start
+		display: inline-grid
+		grid-auto-columns: auto auto 1fr
+
+	&-inner.layout-horizontal-inline > &-header,
+	&-inner.layout-horizontal-inline > &-body > &-body-contents,
+	&-inner.layout-horizontal-inline > &-body > &-errors,
+	&-inner.layout-horizontal-inline > &-body > &-description,
+	&-inner.layout-horizontal-inline > &-footer,
+	&-inner.layout-horizontal-inline > &-errors
+		display: inline-flex
+		flex-direction: column
+
+	&-inner.layout-horizontal-inline > &-footer
+		align-items: flex-start
+
+	&-inner.layout-horizontal-inline > &-header
+		grid-row: 1
+	&-inner.layout-horizontal-inline > &-body
+		display: contents
+	&-inner.layout-horizontal-inline > &-body > &-body-contents
+		grid-row: 1
+		align-self: flex-start
+	&-inner.layout-horizontal-inline > &-body > &-errors
+		grid-row: auto
+		grid-column: 1/4
+	&-inner.layout-horizontal-inline > &-body > &-description
+		grid-row: auto
+		grid-column: 1/4
+	&-inner.layout-horizontal-inline > &-footer
+		grid-row: 1
+
+	&-inner.view-labelInlineLeft > &-header
+		order: 1
+	&-inner.view-labelInlineLeft > &-body > &-body-contents
+		order: 2
+	&-inner.view-labelInlineLeft > &-body > &-errors
+		order: 4
+	&-inner.view-labelInlineLeft > &-body > &-description
+		order: 5
+	&-inner.view-labelInlineLeft > &-footer
+		order: 3
+
+	&-inner.view-labelInlineRight > &-header
+		order: 2
+	&-inner.view-labelInlineRight > &-body > &-body-contents
+		order: 1
+	&-inner.view-labelInlineRight > &-body > &-errors
+		order: 4
+	&-inner.view-labelInlineRight > &-body > &-description
+		order: 5
+	&-inner.view-labelInlineRight > &-footer
+		order: 3
