Update RepeaterItemContainer Playwright tests & styles

--- a/packages/ui/src/components/RepeaterItemContainer/RepeaterItemContainer.sass
+++ b/packages/ui/src/components/RepeaterItemContainer/RepeaterItemContainer.sass
@@ -13,16 +13,16 @@
 		&:not(.view-sortable.is-active)
 			border: 0
 			border-radius: 0
-		.#{$cui-conf-globalPrefix}view-direction-vertical > &:first-child
+		.#{$cui-conf-globalPrefix}view-direction\:vertical > &:first-of-type
 			border-top-left-radius: var(--cui-control-border-radius)
 			border-top-right-radius: var(--cui-control-border-radius)
-		.#{$cui-conf-globalPrefix}view-direction-vertical > &:last-child
+		.#{$cui-conf-globalPrefix}view-direction\:vertical > &:last-of-type
 			border-bottom-left-radius: var(--cui-control-border-radius)
 			border-bottom-right-radius: var(--cui-control-border-radius)
-		.#{$cui-conf-globalPrefix}view-direction-horizontal > &:first-child
+		.#{$cui-conf-globalPrefix}view-direction\:horizontal > &:first-of-type
 			border-bottom-left-radius: var(--cui-control-border-radius)
 			border-top-left-radius: var(--cui-control-border-radius)
-		.#{$cui-conf-globalPrefix}view-direction-horizontal > &:last-child
+		.#{$cui-conf-globalPrefix}view-direction\:horizontal > &:last-of-type
 			border-bottom-right-radius: var(--cui-control-border-radius)
 			border-top-right-radius: var(--cui-control-border-radius)
 
