--- a/packages/ui/src/components/Layout/LayoutChrome.sass
+++ b/packages/ui/src/components/Layout/LayoutChrome.sass
@@ -43,7 +43,7 @@
 		max-width: $breakpoint-max-xsmall
 		position: sticky
 		top: 0
-		z-index: 2
+		z-index: 1
 	&-bar-header
 		display: flex
 		flex-direction: row
@@ -78,8 +78,11 @@
 		padding-right: var(--cui-layout-chrome-padding-right)
 	&-body
 		background-color: var(--cui-background-color)
+		display: flex
+		flex-direction: column
 		flex-grow: 1
-		position: relative
+		position: static !important
+		z-index: unset !important
 	&-navigation-button
 		height: var(--cui-control-height)
 		margin-top: -0.5em
@@ -95,13 +98,10 @@
 		--layout-chrome-bar-width: 0px
 		&-bar
 			max-width: 100vw
+			z-index: unset
 		&-bar-body
 			--cui-padding-left: calc(var(--cui-gap-horizontal) * 10)
 			--cui-padding-right: calc(var(--cui-gap-horizontal) * 10)
-			z-index: 1
-		&-body
-			min-height: 100vh
-			z-index: 3
 		&.view-collapsed &-bar
 			height: unset
 		&.view-collapsed &-bar-body,
@@ -121,8 +121,6 @@
 			padding-left: env(safe-area-inset-left, 0em)
 		&-body
 			--cui-layout-section-gap: #{$cui-gap * 8}
-			display: flex
-			flex-direction: column
 		&-navigation-button
 			display: none
 
