SASS: Reorder imports

--- a/packages/ui/src/styles/_customProperties.sass
+++ b/packages/ui/src/styles/_customProperties.sass
@@ -34,6 +34,9 @@
 	--cui-padding-right: var(--cui-padding-horizontal)
 	--cui-padding: var(--cui-padding-horizontal)
 
+	--cui-shadow-offset: var(--cui-gap)
+	--cui-shadow-color: var(--cui-color--lower)
+
 	--cui-edge-offset-horizontal: 0em
 	--cui-edge-offset-left: var(--cui-edge-offset-horizontal)
 	--cui-edge-offset-right: var(--cui-edge-offset-horizontal)
