--- a/packages/ui/src/components/Forms/Button/Button.sass
+++ b/packages/ui/src/components/Forms/Button/Button.sass
@@ -278,3 +278,7 @@
 			border-top-left-radius: 0
 			border-top-right-radius: 0
 			border-top: none
+
+// Fix: tailwind reset background color
+button.#{$cui-conf-globalPrefix}button, [type='button'].#{$cui-conf-globalPrefix}button
+	background: var(--cui-button-background-color)
