Fix background button with tailwind

--- a/packages/ui/src/components/Forms/Button/Button.sass
+++ b/packages/ui/src/components/Forms/Button/Button.sass
@@ -1,4 +1,4 @@
-.#{$cui-conf-globalPrefix}button
+.#{$cui-conf-globalPrefix}button, button.#{$cui-conf-globalPrefix}button
 	$root: &
 
 	@extend %buttonStates
