--- a/packages/ui/src/components/Forms/FieldContainer/FieldContainer.sass
+++ b/packages/ui/src/components/Forms/FieldContainer/FieldContainer.sass
@@ -31,7 +31,7 @@
 	&:not(.is-active):not(:focus-within) > &-label
 		color: var(--cui-color--high)
 
-	&-required-asterix
+	&-required-asterisk
 		color: var(--cui-control-color)
 
 	&-header,
