--- a/packages/ui/src/components/RepeaterItemContainer/RepeaterItemContainer.sass
+++ b/packages/ui/src/components/RepeaterItemContainer/RepeaterItemContainer.sass
@@ -5,7 +5,7 @@
 
 	transition: background-image .15s
 
-	&.view-sortable
+	&.sortable\:true
 		--cui-box-content-padding-left: calc(2 * var(--cui-box-content-padding))
 
 	&-header
