--- a/packages/ui/src/styles/abstract/controlEssentials.sass
+++ b/packages/ui/src/styles/abstract/controlEssentials.sass
@@ -4,25 +4,25 @@
 	display: block
 	:root &
 		box-sizing: border-box
-	font-family: inherit
-	transition-duration: var(--cui-transition-duration--fast)
-	transition-property: box-shadow, color, background, opacity
-	font-weight: $fw-normal
-	font-size: inherit
-	text-decoration: none
-	position: relative
-	margin: 0
-	border-style: solid
-	border-width: var(--cui-control-border-width)
-	border-radius: var(--cui-control-border-radius)
-	resize: none
-	width: 100%
-	overflow: hidden
-	line-height: var(--cui-control-line-height)
+		font-family: inherit
+		transition-duration: var(--cui-transition-duration--fast)
+		transition-property: box-shadow, color, background, opacity
+		font-weight: $fw-normal
+		font-size: inherit
+		text-decoration: none
+		position: relative
+		margin: 0
+		border-style: solid
+		border-width: var(--cui-control-border-width)
+		border-radius: var(--cui-control-border-radius)
+		resize: none
+		width: 100%
+		overflow: hidden
+		line-height: var(--cui-control-line-height)
 
 	&:-webkit-autofill
 		-webkit-box-shadow: 0 0 0 1000px #FFFFFF inset !important
 
-	&.view-withTopToolbar
+	&.withTopToolbar-true
 		border-top-left-radius: 0
 		border-top-right-radius: 0
