Add `StyleSheet` support to `Repeater`
- Adds `className` to `Repeater`, `Box`, `FieldContainer` & `TextInput`

--- a/packages/ui/src/components/Forms/FieldContainer/FieldContainer.sass
+++ b/packages/ui/src/components/Forms/FieldContainer/FieldContainer.sass
@@ -29,7 +29,7 @@
 	&:not(.is-active):not(:focus-within) > &-label
 		color: var(--cui-color--high)
 
-	&-required-asterix
+	&-required-asterisk
 		color: var(--cui-control-color)
 
 	&-header,
