--- a/packages/ui/src/styles/abstract/controlEssentials.sass
+++ b/packages/ui/src/styles/abstract/controlEssentials.sass
@@ -24,6 +24,6 @@
 	&:-webkit-autofill
 		-webkit-box-shadow: 0 0 0 1000px #FFFFFF inset !important
 
-	&.view-withTopToolbar
+	&.withTopToolbar-true
 		border-top-left-radius: 0
 		border-top-right-radius: 0
