Remove vertical size relations for screen
- Only keeps the variables if anyone cares to use them
- Remove enlargement of buttons on touch devices

--- a/packages/ui/src/components/Forms/Button/Button.sass
+++ b/packages/ui/src/components/Forms/Button/Button.sass
@@ -191,8 +191,8 @@
 		font-size: var(--cui-button-label-font-size)
 		flex: 1
 		line-height: 1em
-		padding-bottom: calc(var(--cui-cui-gap) - var(--cui-control-border-width, 1px))
-		padding-top: calc(var(--cui-cui-gap) - var(--cui-control-border-width, 1px))
+		padding-bottom: calc(var(--cui-gap) - var(--cui-control-border-width, 1px))
+		padding-top: calc(var(--cui-gap) - var(--cui-control-border-width, 1px))
 		overflow: hidden
 		text-overflow: ellipsis
 		vertical-align: middle
