--- a/packages/ui/src/components/TitleBar/TitleBar.sass
+++ b/packages/ui/src/components/TitleBar/TitleBar.sass
@@ -10,7 +10,7 @@
 	flex-direction: column
 	gap: var(--cui-title-bar-gap)
 	justify-content: space-between
-	padding-bottom: var(--cui-screen-padding-vertical)
+	padding-bottom: var(--cui-padding)
 	padding-left: var(--cui-title-bar-padding-left)
 	padding-right: var(--cui-title-bar-padding-right)
 	padding-top: var(--cui-title-bar-padding-top)
