--- a/packages/ui/src/components/Toaster/Toaster.sass
+++ b/packages/ui/src/components/Toaster/Toaster.sass
@@ -1,8 +1,8 @@
 .cui-toaster
-	--cui-toaster-inset-bottom: calc(var(--cui-screen-padding-vertical, 0.5em) + var(--cui-edge-offset-bottom) + env(safe-area-inset-bottom, 0em))
+	--cui-toaster-inset-bottom: calc(var(--cui-padding, 0.5em) + var(--cui-edge-offset-bottom) + env(safe-area-inset-bottom, 0em))
 	--cui-toaster-inset-left: calc(var(--cui-screen-padding-horizontal, 0.5em) + var(--cui-edge-offset-left) + env(safe-area-inset-left, 0em))
 	--cui-toaster-inset-right: calc(var(--cui-screen-padding-horizontal, 0.5em) + var(--cui-edge-offset-right) + env(safe-area-inset-right, 0em))
-	--cui-toaster-inset-top: calc(var(--cui-screen-padding-vertical, 0.5em) + var(--cui-edge-offset-top) + env(safe-area-inset-top, 0em))
+	--cui-toaster-inset-top: calc(var(--cui-padding, 0.5em) + var(--cui-edge-offset-top) + env(safe-area-inset-top, 0em))
 
 	--cui-toaster-inset: var(--cui-toaster-inset-top) var(--cui-toaster-inset-right) var(--cui-toaster-inset-bottom) var(--cui-toaster-inset-left)
 
