--- a/packages/ui/src/components/Forms/Button/Button.sass
+++ b/packages/ui/src/components/Forms/Button/Button.sass
@@ -282,3 +282,13 @@
 // Fix: tailwind reset background color
 button.#{$cui-conf-globalPrefix}button, [type='button'].#{$cui-conf-globalPrefix}button
 	background: var(--cui-button-background-color)
+
+	&:focus
+		background: var(--cui-button-background-color--highlighted)
+
+	// Duplicate of focus rules to overcome Safaru bug ignoring :hover when selectors are combined
+	&:hover
+		background: var(--cui-button-background-color--highlighted)
+
+	&:active, &.is-active
+		background: var(--cui-button-background-color--pressed)
