--- a/packages/ui/src/components/Aether/Aether.sass
+++ b/packages/ui/src/components/Aether/Aether.sass
@@ -2,5 +2,5 @@
 	+size(100%)
 	min-width: inherit
 	min-height: inherit
-	background: var(--cui-background-color)
+	background-color: var(--cui-background-color)
 	color: var(--cui-color)
