Fix: Scrollable dialog
Scroll inside dialog when content is longer than viewport.

--- a/packages/ui/src/styles/components/dialog.sass
+++ b/packages/ui/src/styles/components/dialog.sass
@@ -34,7 +34,8 @@
 		margin: 1em
 		opacity: 0
 		animation: #{$cui-conf-globalPrefix}dialogIntroIn .2s .1s forwards
-
+		max-height: 100%
+		overflow-y: auto
 
 	&.view-immersive
 		&::before
