--- a/packages/ui/src/styles/abstract/controlEssentials.sass
+++ b/packages/ui/src/styles/abstract/controlEssentials.sass
@@ -14,7 +14,8 @@
 	border-width: var(--cui-control-border-width, 1px)
 	border-radius: var(--cui-control-border-radius)
 	resize: none
-	width: 100%
+	flex-basis: 2em
+	flex-grow: 1
 	overflow: hidden
 	line-height: var(--cui-control-line-height)
 
