fix: allow textarea to grow

--- a/packages/ui/src/components/Forms/Inputs/TextareaInput.sass
+++ b/packages/ui/src/components/Forms/Inputs/TextareaInput.sass
@@ -8,3 +8,4 @@
 
 	padding-bottom: var(--cui-text-area-padding-vertical)
 	padding-top: var(--cui-text-area-padding-vertical)
+	flex-basis: auto // Resets flex-basis to auto to allow textarea to grow
