build: fix yarn 2+ build

--- a/packages/admin/src/styles/_common.sass
+++ b/packages/admin/src/styles/_common.sass
@@ -4,7 +4,7 @@
 // ## Settings, variables and animations
 @import 'variables'
 
-@import './../../node_modules/@mangoweb/sass-base/common'
+@import './../../../../node_modules/@mangoweb/sass-base/common'
 
 @import 'animations/index'
 
