--- a/packages/admin/src/styles/_variables.sass
+++ b/packages/admin/src/styles/_variables.sass
@@ -1,5 +1,5 @@
-@import './../../node_modules/@mangoweb/sass-base/crucialVariables'
-@import './../../node_modules/@mangoweb/sass-base/functions/index'
+@import './../../../../node_modules/@mangoweb/sass-base/crucialVariables'
+@import './../../../../node_modules/@mangoweb/sass-base/functions/index'
 
 // Dimensions
 
