--- a/packages/ui/src/styles/_common.sass
+++ b/packages/ui/src/styles/_common.sass
@@ -1,4 +1,4 @@
 @import 'functions/index'
 @import 'variables'
-@import './../../node_modules/@mangoweb/sass-base/common'
+@import './../../../../node_modules/@mangoweb/sass-base/common'
 @import 'mixins/index'
