--- a/packages/ui/src/styles/_variables.scss
+++ b/packages/ui/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-@import './../../node_modules/@mangoweb/sass-base/_variables';
+@import './../../../../node_modules/@mangoweb/sass-base/_variables';
 @import './functions/index';
 
 // Diameter of rounded objects is larger
