Upgrade Storybook to v7 & Remove old stories

--- a/packages/ui/.storybook/index.sass
+++ b/packages/ui/.storybook/index.sass
@@ -14,7 +14,7 @@ body.sb-show-main.sb-main-padded
 	flex-direction: column
 	padding: 0
 
-#root
+#storybook-root
 	display: flex
 	flex-direction: column
 	flex-grow: 1
