feat(ui): Add `--cui-gutter` CSS custom property

--- a/packages/ui/src/styles/_customProperties.sass
+++ b/packages/ui/src/styles/_customProperties.sass
@@ -24,6 +24,7 @@
 	--cui-logo-size--large: #{em(18px * 2)}
 
 	--cui-gap: #{em(4px)}
+	--cui-gutter: #{em(12px)}
 	--cui-padding: calc(var(--cui-gap) * 4)
 
 	--cui-screen-gap-horizontal: #{em(4px)}
