refactor: Update CMS layout after packages extraction

--- a/ee/cms-layout/src/index.css
+++ b/ee/cms-layout/src/index.css
@@ -1,5 +1,4 @@
-@import "./lib/root.css";
-@import "./packages/ui-layout-slots/index.css";
-@import "./packages/ui-responsive-app-layout/index.css";
-@import "./lib/index.css";
+@import "./root.css";
 @import "@contember/layout/index.css";
+@import "@contember/brand/index.css";
+@import "./layout.css";
