--- a/packages/ui/src/components/index.sass
+++ b/packages/ui/src/components/index.sass
@@ -4,6 +4,7 @@
 @import 'Breadcrumbs/index'
 @import 'Card/index'
 @import 'Collapsible/index'
+@import 'DevBar/index'
 @import 'Divider/index'
 @import 'Dialog/index'
 @import 'Forms/index'
